--- a/Android/scenes/joy/src/main/res/layout/joy_activity_room_list.xml
+++ b/Android/scenes/joy/src/main/res/layout/joy_activity_room_list.xml
@@ -11,7 +11,7 @@
     <io.agora.scene.widget.CommonTitleView
         android:id="@+id/title_view"
         style="@style/title_view"
-        app:ctv_centerText="@string/joy_play"
+        app:ctv_centerText="@string/joy_gameplay"
         tools:ignore="MissingConstraints" />
 
     <com.scwang.smart.refresh.layout.SmartRefreshLayout
