--- a/Android/scenes/joy/src/main/res/layout/joy_dialog_game_rules_layout.xml
+++ b/Android/scenes/joy/src/main/res/layout/joy_dialog_game_rules_layout.xml
@@ -30,38 +30,52 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingVertical="11dp"
-        android:textStyle="bold"
+        android:text="@string/joy_tips_for_launching_anchors"
         android:textColor="@color/black"
         android:textSize="16sp"
-        android:text="@string/joy_choose_game"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ivBottomSheetTitle" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvGame"
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tvIntroduceContent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
-        android:orientation="horizontal"
-        android:paddingBottom="20dp"
-        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-        app:layout_constraintTop_toTopOf="parent"
-        app:spanCount="4"
-        tools:itemCount="40"
-        tools:listitem="@layout/joy_item_game_choose_layout" />
+        android:lineSpacingExtra="3dp"
+        android:minHeight="100dp"
+        android:paddingHorizontal="20dp"
+        android:textColor="#191919"
+        android:textSize="13sp"
+        app:layout_constraintTop_toBottomOf="@id/mtBottomSheetTitle"
+        tools:text="【获胜规则】将对方boss推到的乙方获胜\n
+【加入对战】发送弹幕加入支持的阵营加入后本单局无法更换阵营\n
+火焰格里芬阵营：扣“红”或“8”加入\n
+冰雪格里芬阵营：扣“蓝”或“9”加入\n
+【出兵队召唤】\n
+点赞召唤 小黄鸡x6\n
+评论“666”召唤 小黄鸡x12\n
+评论“666”召唤 小黄鸡x12\n
+评论“666”召唤 小黄鸡x12\n
+评论“666”召唤 小黄鸡x12\n
+评论“666”召唤 小黄鸡x12\n
+评论“666”召唤 小黄鸡x12\n
+评论“666”召唤 小黄鸡x12\n
+评论“666”召唤 小黄鸡x12\n
+评论“666”召唤 小黄鸡x12" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnConfirm"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
         android:background="@drawable/joy_bg_game_choose_btn"
         android:gravity="center"
-        android:text="@string/confirm"
+        android:text="@string/i_know"
         android:textColor="@color/white"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rvGame" />
+        app:layout_constraintTop_toBottomOf="@id/tvIntroduceContent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
