--- a/Android/scenes/joy/src/main/res/layout/joy_activity_room_list.xml
+++ b/Android/scenes/joy/src/main/res/layout/joy_activity_room_list.xml
@@ -31,15 +31,14 @@
             android:id="@+id/rvRooms"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
+            android:paddingHorizontal="7.5dp"
             android:layout_marginBottom="20dp"
             android:paddingBottom="50dp"
             android:overScrollMode="never"
             android:visibility="gone"
             android:clipChildren="false"
             android:clipToPadding="false"
-            tools:listitem="@layout/joy_item_room_list"
+            tools:listitem="@layout/joy_item_room_list_3"
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:spanCount="2"
             tools:visibility="visible"/>
