--- a/Android/scenes/joy/src/main/res/layout/joy_dialog_gift_layout.xml
+++ b/Android/scenes/joy/src/main/res/layout/joy_dialog_gift_layout.xml
@@ -41,6 +41,7 @@
         android:id="@+id/rvGift"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingHorizontal="15dp"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:layout_constraintTop_toBottomOf="@+id/mtBottomSheetTitle"
         app:spanCount="3"
@@ -61,17 +62,17 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/black_20_percent"
             android:gravity="center"
             android:orientation="horizontal">
 
             <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/ivSubCount"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="6dp"
                 android:padding="2dp"
-                android:src="@drawable/joy_icon_sub_grey" />
+                android:src="@drawable/joy_icon_sub" />
 
             <com.google.android.material.divider.MaterialDivider
                 android:layout_width="1dp"
@@ -79,6 +80,7 @@
                 app:dividerColor="#DFE1E6" />
 
             <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tvGiftCount"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -93,6 +95,7 @@
                 app:dividerColor="#DFE1E6" />
 
             <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/ivPlusCount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="6dp"
