--- a/Android/scenes/joy/src/main/res/values/styles.xml
+++ b/Android/scenes/joy/src/main/res/values/styles.xml
@@ -5,9 +5,33 @@
         <item name="cornerSize">50%</item>
     </style>
 
+    <style name="joy_roundStyle_6">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">6%</item>
+    </style>
+
+    <!-- like自定义属性 -->
+    <declare-styleable name="joy_LikeLayout">
+        <attr name="joy_initX" format="dimension" />
+        <attr name="joy_initY" format="dimension" />
+        <attr name="joy_xRand" format="dimension" />
+        <attr name="joy_animLengthRand" format="dimension" />
+        <attr name="joy_xPointFactor" format="dimension" />
+        <attr name="joy_animLength" format="dimension" />
+        <attr name="joy_heart_width" format="dimension" />
+        <attr name="joy_heart_height" format="dimension" />
+        <attr name="joy_bezierFactor" format="integer" />
+        <attr name="joy_anim_duration" format="integer" />
+    </declare-styleable>
+
     <style name="joy_alert_dialog" parent="Theme.AppCompat.Dialog">
-        <item name="alertDialogStyle">@style/AlertDialog.AppCompat</item>
+        <item name="alertDialogStyle">@style/joy_alert_dialog_style</item>
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="enableEdgeToEdge">true</item>
+    </style>
+
+
+    <style name="joy_alert_dialog_style" parent="AlertDialog.AppCompat">
+        <item name="android:layout">@layout/joy_alert_dialog_layout</item>
     </style>
 </resources>
