[Feat] update room ui

--- a/Android/scenes/joy/src/main/res/layout/joy_dialog_choose_game_layout.xml
+++ b/Android/scenes/joy/src/main/res/layout/joy_dialog_choose_game_layout.xml
@@ -49,6 +49,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:spanCount="4"
         tools:itemCount="40"
+        android:background="@color/white"
+        android:paddingHorizontal="16dp"
         tools:listitem="@layout/joy_item_game_choose_layout" />
 
     <androidx.appcompat.widget.AppCompatButton
