--- a/Android/scenes/joy/src/main/res/layout/joy_live_detail_activity.xml
+++ b/Android/scenes/joy/src/main/res/layout/joy_live_detail_activity.xml
@@ -6,6 +6,11 @@
     android:layout_height="match_parent"
     android:background="@drawable/joy_room_bg">
 
+    <FrameLayout
+        android:id="@+id/flAssistantContainer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/clRoomTitle"
         android:layout_width="wrap_content"
@@ -178,14 +183,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/btnRandom" />
     </com.google.android.material.textfield.TextInputLayout>
-
-    <include
-        android:id="@+id/chooseGameLayout"
-        layout="@layout/joy_dialog_choose_game_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent" />
 
     <View
         android:id="@+id/vKeyboardBg"
