【Feat】update ui

--- a/Android/scenes/joy/src/main/res/layout/joy_activity_live_detail.xml
+++ b/Android/scenes/joy/src/main/res/layout/joy_activity_live_detail.xml
@@ -120,12 +120,26 @@
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.68" />
 
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tvEmptyGame"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="@string/joy_anchor_not_open_gameplay"
+        android:textColor="@color/white"
+        android:textSize="17sp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <FrameLayout
         android:id="@+id/flVideoContainer"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="6dp"
-        android:background="@color/black_80_percent"
+        android:background="@drawable/joy_bg_empty_video"
         app:layout_constraintDimensionRatio="3:4"
         app:layout_constraintEnd_toEndOf="@id/vertical68"
         app:layout_constraintStart_toStartOf="@id/vertical34"
@@ -166,18 +180,18 @@
             android:layout_width="match_parent"
             android:layout_height="38dp"
             android:background="@drawable/joy_bg_send_message"
+            android:ellipsize="end"
             android:gravity="start|center"
             android:hint="@string/joy_send_message"
             android:imeOptions="actionSend"
-            android:maxLines="1"
             android:inputType="text"
-            android:ellipsize="end"
-            android:textCursorDrawable="@drawable/joy_bg_edit_cursor"
+            android:maxLines="1"
             android:paddingHorizontal="12dp"
             android:paddingVertical="0dp"
             android:singleLine="true"
             android:textColor="@color/white"
             android:textColorHint="@color/white_80_percent"
+            android:textCursorDrawable="@drawable/joy_bg_edit_cursor"
             android:textSize="13sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
