--- a/Android/scenes/joy/src/main/res/layout/joy_activity_live_detail.xml
+++ b/Android/scenes/joy/src/main/res/layout/joy_activity_live_detail.xml
@@ -248,5 +248,5 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:constraint_referenced_ids="tvInput,ivGift,likeView"
-        tools:visibility="gone" />
+        android:visibility="gone" />
 </androidx.constraintlayout.widget.ConstraintLayout>
