--- a/Android/scenes/joy/src/main/res/layout/joy_item_gift_layout.xml
+++ b/Android/scenes/joy/src/main/res/layout/joy_item_gift_layout.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:paddingHorizontal="5dp"
@@ -10,8 +10,10 @@
 
     <LinearLayout
         android:id="@+id/itemLayout"
-        android:layout_width="105dp"
-        android:layout_height="120dp"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintDimensionRatio="105:120"
         android:background="@drawable/joy_bg_gift_selected"
         android:gravity="center"
         android:orientation="vertical">
@@ -20,7 +22,7 @@
             android:id="@+id/ivGift"
             android:layout_width="72dp"
             android:layout_height="72dp"
-            tools:src="@mipmap/joy_img_room_item_bg_0" />
+            tools:src="@drawable/joy_icon_gift1" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvGiftName"
@@ -33,4 +35,4 @@
             tools:text="火箭" />
     </LinearLayout>
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
