--- a/Android/scenes/joy/src/main/res/layout/joy_activity_live_prepare.xml
+++ b/Android/scenes/joy/src/main/res/layout/joy_activity_live_prepare.xml
@@ -38,8 +38,7 @@
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/vpGame"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintDimensionRatio="2:1"
+        android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/tvTitleContent"/>
 
     <io.agora.scene.joy.ui.widget.FadeDotsIndicator
