--- a/Android/app/src/main/res/layout/app_fragment_home_index_sub.xml
+++ b/Android/app/src/main/res/layout/app_fragment_home_index_sub.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:paddingTop="16dp"
-        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
         app:spanCount="2"
         tools:listitem="@layout/app_item_home_index_sub"
         android:paddingHorizontal="10dp"
