--- a/Android/scenes/joy/src/main/res/layout/joy_item_game_banner_layout.xml
+++ b/Android/scenes/joy/src/main/res/layout/joy_item_game_banner_layout.xml
@@ -22,6 +22,7 @@
                 android:id="@+id/ivGuide"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
+                android:scaleType="centerCrop"
                 app:layout_constraintDimensionRatio="2:1"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
