--- a/Android/scenes/joy/src/main/res/layout/joy_view_fade_dots_indicator.xml
+++ b/Android/scenes/joy/src/main/res/layout/joy_view_fade_dots_indicator.xml
@@ -5,18 +5,18 @@
     android:layout_gravity="center_vertical">
 
     <ImageView
-        android:id="@+id/dotLight"
+        android:id="@+id/dotNormal"
         android:layout_width="12dp"
         android:layout_height="12dp"
         android:layout_centerInParent="true"
-        android:background="@drawable/joy_dot_indicator_light" />
+        android:background="@drawable/joy_dot_indicator_normal" />
 
     <ImageView
-        android:id="@+id/dotDark"
+        android:id="@+id/dotCurrent"
         android:layout_width="12dp"
         android:layout_height="12dp"
         android:layout_centerInParent="true"
         android:alpha="0"
-        android:background="@drawable/joy_dot_indicator_dark" />
+        android:background="@drawable/joy_dot_indicator_current" />
 
 </RelativeLayout>
