--- a/Android/scenes/pure1v1/src/main/res/layout/pure1v1_call_detail_fragment.xml
+++ b/Android/scenes/pure1v1/src/main/res/layout/pure1v1_call_detail_fragment.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/black"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.CallDetailActivity">
+    tools:context=".ui.CallDetailFragment">
 
     <FrameLayout
         android:id="@+id/vDragContent"
