--- a/Android/scenes/pure1v1/src/main/res/layout/pure1v1_room_list_activity.xml
+++ b/Android/scenes/pure1v1/src/main/res/layout/pure1v1_room_list_activity.xml
@@ -36,4 +36,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         />
+
+    <FrameLayout
+        android:id="@+id/flCallContainer"
+        android:background="@color/black"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="invisible"
+        />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
