--- a/Android/scenes/joy/src/main/res/layout/joy_activity_live_detail.xml
+++ b/Android/scenes/joy/src/main/res/layout/joy_activity_live_detail.xml
@@ -23,7 +23,9 @@
     <FrameLayout
         android:id="@+id/flAssistantContainer"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/clRoomTitle"
@@ -252,10 +254,11 @@
         android:layout_width="match_parent"
         android:layout_height="220dp"
         android:layout_span="1"
+        android:layout_marginBottom="72dp"
         android:paddingBottom="10dp"
         android:paddingHorizontal="10dp"
         android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@id/ivGift"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:listitem="@layout/joy_item_live_detail_message" />
 </androidx.constraintlayout.widget.ConstraintLayout>
