【Feat】update remote video size

--- a/Android/scenes/joy/src/main/res/layout/joy_activity_live_detail.xml
+++ b/Android/scenes/joy/src/main/res/layout/joy_activity_live_detail.xml
@@ -23,8 +23,9 @@
     <FrameLayout
         android:id="@+id/flAssistantContainer"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        android:layout_height="match_parent">
+
+    </FrameLayout>
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/vertical68"
