--- a/Android/scenes/ktv_relay/src/main/res/layout/ktv_relay_layout_lrc_idle.xml
+++ b/Android/scenes/ktv_relay/src/main/res/layout/ktv_relay_layout_lrc_idle.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:id="@+id/playerBg"
     android:layout_height="match_parent"
-    android:background="@mipmap/ktv_mv_default"
+    android:background="@mipmap/ktv_relay_music_player_background"
     android:gravity="center"
     android:orientation="vertical">
 
