--- a/Android/scenes/ktv_singbattle/src/main/res/layout/ktv_singbattle_layout_lrc_control_view.xml
+++ b/Android/scenes/ktv_singbattle/src/main/res/layout/ktv_singbattle_layout_lrc_control_view.xml
@@ -26,7 +26,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:visibility="gone"
-            tools:background="@mipmap/ktv_mv_default"
+            tools:background="@mipmap/mvbg4"
             tools:visibility="visible">
 
             <TextView
