--- a/Android/scenes/voice/src/main/res/layout/voice_activity_sound_selection_layout.xml
+++ b/Android/scenes/voice/src/main/res/layout/voice_activity_sound_selection_layout.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/voice_bg_app_def_white"
+    android:background="@mipmap/bg_app_def_white"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <io.agora.scene.voice.ui.widget.titlebar.RoomTitleBar
