[Feat] optimize code

--- a/Android/scenes/joy/src/main/res/layout/joy_activity_live_detail.xml
+++ b/Android/scenes/joy/src/main/res/layout/joy_activity_live_detail.xml
@@ -214,7 +214,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="15dp"
         android:background="@drawable/joy_bg_send_message"
         android:paddingHorizontal="16dp"
         android:paddingVertical="11dp"
@@ -252,10 +252,12 @@
         android:layout_width="match_parent"
         android:layout_height="220dp"
         android:layout_span="1"
-        android:layout_marginBottom="72dp"
+        android:layout_marginBottom="60dp"
         android:paddingBottom="10dp"
         android:paddingHorizontal="10dp"
         android:orientation="vertical"
+        android:fadingEdgeLength="30dp"
+        android:requiresFadingEdge="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:listitem="@layout/joy_item_live_detail_message" />
